# MacQ

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  MacQ_Developer_Guide_EN.md  MacQ_开发文档_中文版.md  README.md  RELEASE.md  grover_3qubit.ql  main_app.py  pyproject.toml  requirements.txt  test_compiler.py  test_measurement.py  test_measurement_suite.py  test_modular_gates.py  test_qlang_v2_integration.py
.github/workflows/: build_release.yml
c_engine/: Makefile  test_macq  test_omp.c
c_engine/include/: macq.h
c_engine/src/: macq.c
c_engine/tests/: test_macq.c  test_v2_1.c
docs/: 100_qubits_solution.md  CREATE_RELEASE.md  Q-Lang_Specification.md  legacy_build.sh_old  mps_implementation_guide.md
examples/: shor_15.ql  teleportation.ql
macq/: __init__.py  c_bridge.py  cli.py
macq/core/: challenge.py  circuit.py  optimizer.py  oracle.py
macq/gui/: __init__.py  challenge_panel.py  circuit_editor.py  gate_palette.py  hamiltonian_dialog.py  main_window.py  oracle_dialog.py  qlang_editor.py  styles.py  visualizer.py
macq/qlang/: __init__.py  compiler.py  parser.py  tokenizer.py  validator.py
macq/resources/: challenges.json
tests/: bell_state.ql  redundant.ql  test_cli.sh  test_conditional.py  test_python_bridge.py  test_qft.py  test_qlang.py  test_v4_core.py  test_validator.py
web_ui/: README.md  app.js  index.html  server.py
